SERVER-19318 Do not validate $facet subpipelines against top-level pipeline namespace